--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,27 +1,16 @@
+
+
+@media only screen and (min-width: 1200px) {
+    section.newsletter {
+        height: 520px;
+    
+    }
+}
+
 @media only screen and (max-width: 1199.98px) {
-    .banner {
-        background-size: 650px;
-    }
+    .price-list {
 
-    .relationship-container {
-        padding-left: 24px;
-        padding-right: 24px;
-    }
-
-    .relationship-content h2 {
-        font-size: 36px;
-    }
-    .service-list h3 {
-        font-size: 22px;
-    }
-
-    .profile-blog-item {
-        padding: 16px 16px 30px 16px;
-    }
-
-    .profile-blog-location span.years {
-        float: left;
-        margin-left: 20px;
+        padding: 20px 10px 60px 10px;
     }
 }
 
@@ -32,6 +21,7 @@
         width: 100%;
         top: 72px;
         left: 0px;
+        z-index: 9999999;
     }
     .navbar-toggler-icon {
 
@@ -44,138 +34,182 @@
     .nav-menu-right li a {
 		margin-left: 12px;
     }
-    .banner-content h1 {
-        font-size: 48px;
-    }
-    .banner {
-        background-size: 530px;
-    }
-
-    .partner-list img {
-        width: 120px;
+    .relationship-container {
+        padding-left: 24px;
+        padding-right: 24px;
     }
 
     .relationship-colum {
-        padding-right: 50px;
+        padding-right: 0px;
+    }
+    .relationship-content p {
+        font-size: 14px;
+        line-height: 24px;
     }
 
     .relationship-content h2 {
-        font-size: 30px;
+        margin-top: -30px;
+        font-size: 32px;
+        line-height: 42px;
     }
 
-    .relationship-content p {
-        font-size: 14px;
-    }
-    .service-list {
-        padding: 40px 10px;
-        margin-right: 5px;
-        margin-left: 5px;
+    .feature-item p {
+        font-size: 16px;
     }
 
-    .service-list h3 {
-        font-size: 18px;
-    }
-    .service-list p {
-        font-size: 14px;
+    .choose-img img {
+        padding-left: 0px;
     }
 
-    .journey-content p {
+    .choose-content h2 {
+        font-size: 32px;
+        line-height: 42px;
+
+    }
     
-        padding: 0px 30px;
-    }
-    .price-list {
-        padding: 40px 10px;
-    }
-
-    .price-list ul li span {
+    .choose-content p {
         font-size: 14px;
-    }
+        line-height: 24px;
 
-    .profile-blog-location span.years {
-        float: right;
-        margin-left: 20px;
     }
-    .profile-blog-item {
-        margin-top: 30px;
+    section.newsletter {
+        background-size: 100% 396px;
+        background-repeat: no-repeat;
+    }
+    .newsletter-content h3 {
+        font-size: 32px;
+        line-height: 42px;
+    }
+    .footer-part3.footer-part {
+        margin-top: 40px;
     }
 }
 
 
 
 @media only screen and (max-width: 767.98px) {
-    .banner {
-        background-size: 310px;
+    .banner-content h1 {
+        font-size: 32px;
+        line-height: 42px;
     }
-    .partner-container {
-        padding: 50px 26px;
+    .popular-member-heading h2 {
+        font-size: 32px;
+        line-height: 42px;
+
     }
-    .partner-list {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
+    img.popular_love1 {
+        right: -100px;
+        top: 0px;
     }
 
-    .partner-list img {
-        width: 120px;
+    .popular-member-heading p {
+        font-size: 14px;
+        line-height: 24px;
+
+    }
+    .popular-bg {
+        height: 830px;
+        background: linear-gradient(97.06deg, #2E407E -11.18%, #43147A 105.62%);
+    }
+    .popular-list {
         margin-top: 20px;
-        margin-left: 15px;
     }
 
-    .relationship-content {
-        margin-top: 50px;
+    .relationship-content h2 {
+        margin-top: 20px;
     }
 
-    .service-list {
-        margin-top: 30px;
+    .feature-item {
+        margin-top: 20px;
     }
 
-    .service-list {
-        margin-top: 30px;
+    .row.choose-row {
+        display: flex;
+        flex-direction: column-reverse;
     }
-    .price-list {
-        padding: 40px 10px;
-        margin-top: 30px;
-    }
-    .profile-blog-heading p {
-        margin-bottom: 0px;
-    }
-    .profile-view-more {
-    
-        justify-content: start;
+
+    .section-title h2 {
+        font-size: 32px;
+        line-height: 42px;
 
     }
-}
+    .feature-title h2 {
+        font-size: 32px;
+        line-height: 42px;
+    }
 
-
-@media only screen and (max-width: 575.98px) {
-    .newsletter-content {
-        width: 350px;
+    .newsletter-content h3 {
+        font-size: 28px;
+        line-height: 38px;
     }
     .subscribe-form {
         width: 350px;
     }
-    .banner {
-        background-size: 200px;
-    }
+    
+    
+}
 
-    .latest-profile {
-        margin-top: 20px;
-    }
 
-    .banner-content h1 {
-        font-size: 42px;
+@media only screen and (max-width: 575.98px) {
+    img.banner-love1 {
+        position: absolute;
+        left: 1px;
+        top: -50px;
+        width: 60px;
     }
-
-    .banner-content {
-        margin-top: 50px;
-    }
-
-    .journey-content h2 {
-        font-size: 36px;
-    }
-
-    .section-title h2 {
-        font-size: 36px;
+    img.banner-love2 {
+        right: 0px;
+        top: -50px;
     }
     
+    .banner-form {
+        width: 330px;
+    }
+    .banner-form form button {
+
+        margin-top: 20px;
+        width: 50%;
+    }
+    .banner-content {
+        padding: 0px 0px;
+    }
+    img.popular_love1 {
+        right: 0px;
+        top: -90px;
+        width: 60px;
+    }
+    img.popular_love2 {
+        position: absolute;
+        left: 0px;
+        top: -60px;
+    }
+
+    .popular-bg {
+        height: 100%;
+        padding-bottom: 30px;
+    }
+    section.newsletter {
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .subscribe-form {
+        width: 320px;
+    }
+    .subscribe-form form input {
+
+        width: 180px;
+    }
+    .ready h3 {
+
+        font-size: 24px;
+
+        line-height: 34px;
+    }
+    .ready-start {
+        padding: 14px 18px;
+    }
+
+    .ready-contact {
+        padding: 14px 18px;
+    }
 }
